fix close button visibility

--- a/app/styles/project/_c-upload.scss
+++ b/app/styles/project/_c-upload.scss
@@ -98,7 +98,7 @@
 
   @include mq(medium) {
     img {
-      height: 110px;
+      height: 100px;
     }
   }
 }
@@ -110,8 +110,7 @@
     top: $au-unit-tiny;
     right: $au-unit-tiny;
     z-index: 3;
-
-    color: $au-gray-200;
+    color: $au-gray-600;
     mix-blend-mode: multiply;
   }
 }
@@ -119,5 +118,4 @@
 .au-c-upload-download {
   padding:  $au-unit-tiny/2 $au-unit-tiny 0;
   margin-top: 0;
-
 }
